--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ruleta</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -19,17 +19,17 @@
       <div class="inputs">
         <label for="numberInput">Zahl:</label>
         <input id="numberInput" type="text" />
-        <label for="einsatz">Input Money:</label>
+        <label for="einsatz">Geld:</label>
         <input id="einsatz" type="text" />
       </div>
 
       <div class="displayNumbers">
         <div class="randomInput card">
-          <h2>Input Value:</h2>
+          <h2>Wert:</h2>
           <p id="numberInputValue"></p>
         </div>
         <div class="inputValue card">
-          <h2>Random Nummer:</h2>
+          <h2>Randome Nummer:</h2>
           <p id="numberRandom"></p>
         </div>
         <div class="result card">
