--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="inputs">
         <label for="numberInput">Zahl:</label>
         <input id="numberInput" type="text" />
-        <label for="einsatz">Geld:</label>
+        <label for="einsatz">Dein Geld:</label>
         <input id="einsatz" type="text" />
       </div>
 
