--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <button id="gerade">Gerade</button>
 
         <button id="ungerade">Ungerade</button>
+
+        <button id="btn5">5</button>
+        <button id="btn10">10</button>
+        <button id="btn10">20</button>
+        <button id="btn100">100</button>
       </div>
       <div class="inputs">
         <label for="numberInput">Zahl:</label>
@@ -29,15 +34,18 @@
           <p id="numberInputValue"></p>
         </div>
         <div class="inputValue card">
-          <h2>Randome Nummer:</h2>
+          <h2>RandNummer:</h2>
           <p id="numberRandom"></p>
         </div>
         <div class="result card">
-          <p id="win" class="grenn red">☹️😁?</p>
+          <p id="win">☹️😁?</p>
         </div>
         <div class="kontostand card">
           <p id="kontostand">💰💰</p>
         </div>
+      </div>
+      <div class="multiPlay card">
+        <p id="multiPlay">🎲🎲🎲</p>
       </div>
     </div>
 
