--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="multiPlay card">
-        <p id="multiPlay">🎲🎲🎲</p>
+        <p id="multiPlay"></p>
       </div>
     </div>
 
