--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <button id="gerade">Gerade</button>
 
         <button id="ungerade">Ungerade</button>
+        <button id="butonVielZahle">VielZahle</button>
 
         <button id="btn5">5</button>
         <button id="btn10">10</button>
@@ -26,6 +27,10 @@
         <input id="numberInput" type="text" />
         <label for="einsatz">Dein Geld:</label>
         <input id="einsatz" type="text" />
+        <label for="minValue">Min Zahl:</label>
+        <input id="minValue" type="text" />
+        <label for="maxValue">Max Zahl:</label>
+        <input id="maxValue" type="text" />
       </div>
 
       <div class="displayNumbers">
@@ -46,6 +51,10 @@
       </div>
       <div class="multiPlay card">
         <p id="multiPlay"></p>
+      </div>
+      <div class="containerresult">
+        <div class="resMultiPlay"><p id="resMultiPlay"></p></div>
+        <div class="resMultiPlay"><p id="resVielZahl"></p></div>
       </div>
     </div>
 
